# advent-of-code-2021

./: .flake8  .gitignore  .pre-commit-config.yaml  01-sonar  02-dive  03-diagnostic  04-bingo  05-vents  06-lanternfish  07-crabs  README.md  pyproject.toml
01-sonar/: main.ipynb
02-dive/: main.ipynb
03-diagnostic/: main.ipynb
04-bingo/: main.ipynb
05-vents/: main.ipynb
06-lanternfish/: main.ipynb
07-crabs/: main.ipynb
08-segments/: 01-multi-pass.ipynb  02-by-frequency.ipynb
09-smoke-basin/: main.ipynb
10-syntax/: main.ipynb
11-octopusea/: main.ipynb
12-passages/: main.ipynb
13-origami/: numpy-coord.ipynb  numpy-grid.ipynb  numpy.ipynb  python.ipynb
14-polymer/: main.ipynb
15-chiton/: main.ipynb
16-bits/: main.ipynb
19-scanner/: main.ipynb
20-trench-map/: main.ipynb
