[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Angus Hollands", email = "goosey15@gmail.com"},
]
dependencies = [
    "numpy>=1.21.1",
    "awkward~=1.7",
]
requires-python = ">=3.7"
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool.pdm.dev-dependencies]
lint = [
    "black>=21.11b1",
    "isort~=5.10",
    "flake8~=4.0",
]
lab = [
    "jupyterlab~=3.2",
    "jldracula~=0.1",
    "jupyterlab-code-formatter~=1.4",
    "jupyterlab-lsp~=3.9",
    "python-lsp-server[all]~=1.3",
]
notebook = [
    "papermill~=2.3",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
